--- a/views/camp/show.ejs
+++ b/views/camp/show.ejs
@@ -110,7 +110,7 @@
                     
 
                       <%#Show when the comment was made%>
-                      <span class="float-right"><%= moment(comment.createdAt).fromNow() %></span>
+                      <span class="float-right"><%= moment(comment.created).fromNow() %></span>
                     </strong>
 
                     <%#Printing the comment%>
