disabled google oauth

--- a/views/authform/register.ejs
+++ b/views/authform/register.ejs
@@ -70,7 +70,7 @@
                 <h1>Create Account</h1>
                 <div class="social-container">
                     <a href="/auth/facebook" class="ui facebook button mx-2 my-2 disabledClick"><i class="facebook icon"></i>Facebook</a>
-                    <a href="/auth/google" class="ui google plus button mx-2 my-2 "><i class="google plus icon"></i>Google Plus</a>
+                    <a href="/auth/google" class="ui google plus button mx-2 my-2 disabledClick"><i class="google plus icon"></i>Google Plus</a>
                 </div>
                 
 
