--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,7 +3,7 @@
         <div class="footer-copyright text-center text-muted py-3">© 2019 Copyright:
             <a class="ancers" href="/"> Yelpcamp.com</a>
             <a class="ancers" style="display:block;" href="https://www.udemy.com/the-web-developer-bootcamp/learn/v4/content">The Web Developer Bootcamp by Colt Steele</a>
-            <p>Developed by Naveen Chulani</p>
+            <div>Developed by <a class="ancers" href="https://github.com/nchulani2">Naveen Chulani</a></div>
         </div>
    </footer>  
    <script>
